plugins/groovy/testdata/highlighting/duplicateNamesInTheFile/ClassDefinitionAndClassDefinition.groovy
class Date {}

<error descr="Name 'Date' is already defined in file">class Date {}</error>